--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
+.main-container .content-container .content-area {
+  padding: 0rem 1rem 1rem 1rem;
+}
