--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,27 +21,16 @@
     <clr-vertical-nav [clrVerticalNavCollapsible]="true" 
     [(clrVerticalNavCollapsed)]="collapsed" [clr-nav-level]="1">
 
-      <a clrVerticalNavLink routerLink="./normal" routerLinkActive="active">
-        <clr-icon clrVerticalNavIcon shape="user"></clr-icon>
-        Normal
+      <a clrVerticalNavLink routerLink="/main" routerLinkActive="active">
+        <clr-icon clrVerticalNavIcon shape="home"></clr-icon>
+        หน้าหลัก
       </a>
-      <a clrVerticalNavLink routerLink="./electric" routerLinkActive="active">
-        <clr-icon clrVerticalNavIcon shape="bolt"></clr-icon>
-        Electric
+      <a clrVerticalNavLink routerLink="/new" routerLinkActive="active">
+        <clr-icon clrVerticalNavIcon shape="plus"></clr-icon>
+        เพิ่มผู้ใช้งาน
       </a>
-      <a clrVerticalNavLink routerLink="./poison" routerLinkActive="active">
-        <clr-icon clrVerticalNavIcon shape="sad-face"></clr-icon>
-        Poison
-      </a>
-      <a clrVerticalNavLink routerLink="./grass" routerLinkActive="active">
-        <clr-icon clrVerticalNavIcon shape="bug"></clr-icon>
-        Grass
-      </a>
-      <a clrVerticalNavLink routerLink="./fighting" routerLinkActive="active">
-        <clr-icon clrVerticalNavIcon shape="shield"></clr-icon>
-        Fighting
-      </a>
-      <a clrVerticalNavLink routerLink="./credit" routerLinkActive="active">
+
+      <a clrVerticalNavLink routerLink="/credit" routerLinkActive="active">
         <clr-icon clrVerticalNavIcon shape="certificate"></clr-icon>
         Credit
       </a>
