--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,18 +1,48 @@
 
-<clr-datagrid style="height: 100%;">
-  <clr-dg-column>User ID</clr-dg-column>
-  <clr-dg-column>Name</clr-dg-column>
-  <clr-dg-column>Creation date</clr-dg-column>
-  <clr-dg-column>Favorite color</clr-dg-column>
+<clr-datagrid style="height: 100%;" [clrDgLoading]="loding">
 
-  <clr-dg-row *ngFor="let user of users">
-      <clr-dg-cell>{{user.id}}</clr-dg-cell>
-      <clr-dg-cell>{{user.name}}</clr-dg-cell>
-      <clr-dg-cell>{{user.creation | date}}</clr-dg-cell>
-      <clr-dg-cell>{{user.color}}</clr-dg-cell>
+  <clr-dg-column [clrDgField]="'email'">
+      <ng-container *clrDgHideableColumn="{hidden: false}">
+          Email
+      </ng-container>
+  </clr-dg-column>
+  <clr-dg-column [clrDgField]="'name.first'">
+      <ng-container *clrDgHideableColumn="{hidden: false}">
+          First name
+      </ng-container>
+  </clr-dg-column>
+  <clr-dg-column [clrDgField]="'name.last'">
+      <ng-container *clrDgHideableColumn="{hidden: false}">
+          Last name
+      </ng-container>
+  </clr-dg-column>
+  <clr-dg-column>
+      <ng-container *clrDgHideableColumn="{hidden: false}">
+          Telephone
+      </ng-container>
+  </clr-dg-column>
+  <clr-dg-column>
+      <ng-container *clrDgHideableColumn="{hidden: false}">
+          Birth
+      </ng-container>
+  </clr-dg-column>
+
+  <clr-dg-row *clrDgItems="let user of users">
+      <clr-dg-cell>{{user.email}}</clr-dg-cell>
+      <clr-dg-cell>{{user.name.first}}</clr-dg-cell>
+      <clr-dg-cell>{{user.name.last}}</clr-dg-cell>
+      <clr-dg-cell>{{user.phone}}</clr-dg-cell>
+      <clr-dg-cell>{{user.dob}}</clr-dg-cell>
   </clr-dg-row>
 
-  <clr-dg-footer>{{users.length}} users</clr-dg-footer>
+  
+  <clr-dg-footer>
+    {{pagination.firstItem + 1}} - {{pagination.lastItem + 1}}
+    of {{pagination.totalItems}} users
+    <clr-dg-pagination #pagination [clrDgPageSize]="20"></clr-dg-pagination>
+</clr-dg-footer>
+ 
+
 </clr-datagrid>
 
 
