--- a/src/app/new-user/new-user.component.html
+++ b/src/app/new-user/new-user.component.html
@@ -1,3 +1,92 @@
-<p>
-  new-user works!
-</p>
+<div class="row">
+  <div class="col-md-8 push-md-2">
+    <div class="card">
+      <div class="card-header">
+        Add new user
+      </div>
+      <div class="card-block">
+          <clr-alert [clrAlertType]="'alert-danger'" *ngIf="isError">
+              <div class="alert-item">
+                  <span class="alert-text">
+                      {{errorMessage}}
+                  </span>
+              </div>
+          </clr-alert>
+
+          
+        <div class="card-text">
+          <form>
+            <section class="form-block">
+              <div class="form-group row">
+                <div class="col-md-2">
+                  <label for="username">Username</label>
+                </div>
+                <div class="col-md-10">
+                  <input class="form-control" type="text" name="username" [(ngModel)]="username" id="username">
+                </div>
+              </div>
+              <div class="form-group row">
+                <div class="col-md-2">
+                  <label for="password">Password</label>
+                </div>
+                <div class="col-md-10">
+                  <input class="form-control" name="password" [(ngModel)]="password" type="password" id="password">
+                </div>
+              </div>
+              <div class="form-group row">
+                <div class="col-md-2">
+                  <label for="firstName">First name</label>
+                </div>
+                <div class="col-md-4">
+                  <input class="form-control" name="firstName" [(ngModel)]="firstName" type="text" id="firstName">
+                </div>
+                <div class="col-md-2">
+                  <label for="lastName">Last name</label>
+                </div>
+                <div class="col-md-4">
+                  <input class="form-control" type="text" name="lastName" [(ngModel)]="lastName" id="lastName">
+                </div>
+              </div>
+              <div class="form-group row">
+                <div class="col-md-2">
+                  <label for="userType">User type</label>
+                </div>
+                <div class="col-md-3">
+                  <div class="select">
+                    <select id="userType" [(ngModel)]="userType" name="userType">
+                      <option>1</option>
+                      <option>2</option>
+                      <option>3</option>
+                      <option>4</option>
+                      <option>50000000</option>
+                    </select>
+                  </div>
+                </div>
+
+              </div>
+              <div class="form-group row">
+                <div class="col-md-2">
+                  <label for="userType">Active</label>
+                </div>
+                <div class="col-md-3">
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="isActive" name="isActive" [(ngModel)]="isActive">
+                        <label for="isActive">&nbsp;</label>
+                    </div>
+                </div>
+
+              </div>
+
+            </section>
+          </form>
+        </div>
+      </div>
+      <div class="card-footer">
+        <button class="btn btn-sm btn-success" (click)="save()" [disabled]="!username || !firstName || !lastName || !userType">
+          <clr-icon shape="floppy"></clr-icon> Save data
+        </button>
+        <button class="btn btn-sm btn-danger" routerLink="/">Back</button>
+      </div>
+    </div>
+  </div>
+</div>
