fixed main route active

--- a/src/app/admin/layout/layout.component.html
+++ b/src/app/admin/layout/layout.component.html
@@ -21,7 +21,7 @@
     <clr-vertical-nav [clrVerticalNavCollapsible]="true" 
     [(clrVerticalNavCollapsed)]="collapsed" [clr-nav-level]="1">
 
-      <a clrVerticalNavLink routerLink="/admin" routerLinkActive="active">
+      <a clrVerticalNavLink routerLink="/admin/main" routerLinkActive="active">
         <clr-icon clrVerticalNavIcon shape="home"></clr-icon>
         หน้าหลัก
       </a>
