--- a/src/app/admin/new-user/new-user.component.html
+++ b/src/app/admin/new-user/new-user.component.html
@@ -82,7 +82,7 @@
         (click)="save()" [disabled]="saving || !username || (!password && !userId) || !firstName || !lastName || !userType">
           <clr-icon shape="floppy"></clr-icon> Save data
         </button>
-        <button class="btn btn-sm btn-danger" routerLink="/">Back</button>
+        <button class="btn btn-sm btn-danger" routerLink="/admin">Back</button>
       </div>
     </div>
   </div>
