--- a/src/app/admin/layout/layout.component.html
+++ b/src/app/admin/layout/layout.component.html
@@ -37,6 +37,10 @@
         <clr-icon clrVerticalNavIcon shape="dashboard"></clr-icon>
         Dashboard
       </a>
+      <a clrVerticalNavLink routerLink="/admin/maps" routerLinkActive="active">
+        <clr-icon clrVerticalNavIcon shape="map"></clr-icon>
+        Maps
+      </a>
       <a clrVerticalNavLink routerLink="/admin/new" routerLinkActive="active">
         <clr-icon clrVerticalNavIcon shape="plus"></clr-icon>
         เพิ่มผู้ใช้งาน
