--- a/src/app/admin/maps/maps.component.html
+++ b/src/app/admin/maps/maps.component.html
@@ -1,3 +1,15 @@
+<header class="header-6">
+  <form class="search">
+      <label for="search_input">
+        <input id="search_input" #search 
+        style="width: 500px;" 
+        type="text" 
+        placeholder="Search for keywords...">
+      </label>
+  </form>
+</header>
+
+
 <agm-map 
 [latitude]="lat" 
 [longitude]="lng" 
