--- a/src/app/admin/maps/maps.component.html
+++ b/src/app/admin/maps/maps.component.html
@@ -8,7 +8,7 @@
       </label>
   </form>
   <div class="header-actions">
-    {{ lat }}, {{ lng }}
+    <span style="padding-top: 20px;">{{ lat }}, {{ lng }}</span>
     <a href="javascript://" class="nav-link nav-icon" (click)="saveMap()">
       <clr-icon shape="floppy"></clr-icon>
     </a>
