--- a/src/app/admin/main/main.component.html
+++ b/src/app/admin/main/main.component.html
@@ -47,6 +47,9 @@
       <a class="action-item" href="/admin/maps?userId={{user.user_id}}">
         <clr-icon shape="map"></clr-icon> แสดงแผนที่
       </a>
+      <a class="action-item" href="javascript://" (click)="sendAddUser()">
+        <clr-icon shape="note"></clr-icon> Send Add user
+      </a>
     </clr-dg-action-overflow>
     <clr-dg-cell appYellowText>{{user.username | uppercase}}</clr-dg-cell>
     <clr-dg-cell>{{user.first_name | lowercase}}</clr-dg-cell>
